# insightdb

./: Cargo.toml  LICENSE  README.md  config.json  test.csv
src/: aggregators.rs  computation.rs  config.rs  database.rs  databases.rs  engine.rs  grid.rs  keyed_table.rs  lib.rs  main.rs  parser.rs  server.rs  tables.rs
