[package]
name = "insightdb"
version = "0.1.0"
authors = ["jaupe"]

[dependencies]
clap = "~2.26"
csv = "*"
toml = "0.4"
tabwriter = "1"
chrono = "0.4"
rayon = "*"
# tokio
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
# serialization
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
# misc support for thread pools, random numbers
futures-cpupool = "0.1"
rand = "0.3"
# database support with connection pooling
r2d2 = "0.7"
r2d2_postgres = "0.11"
# our toy HTTP implementation
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }